--- a/safari/shortcut.safariextension/Info.plist
+++ b/safari/shortcut.safariextension/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>Builder Version</key>
-	<string>10600.8.9</string>
+	<string>12602.1.50.0.10</string>
 	<key>CFBundleDisplayName</key>
 	<string>shortcut</string>
 	<key>CFBundleIdentifier</key>
@@ -31,7 +31,7 @@
 		</dict>
 	</dict>
 	<key>DeveloperIdentifier</key>
-	<string>BZRYBT6R5G</string>
+	<string>0000000000</string>
 	<key>ExtensionInfoDictionaryVersion</key>
 	<string>1.0</string>
 	<key>Permissions</key>
