--- a/safari/shortcut.safariextension/Info.plist
+++ b/safari/shortcut.safariextension/Info.plist
@@ -31,7 +31,7 @@
 		</dict>
 	</dict>
 	<key>DeveloperIdentifier</key>
-	<string>0000000000</string>
+	<string>BZRYBT6R5G</string>
 	<key>ExtensionInfoDictionaryVersion</key>
 	<string>1.0</string>
 	<key>Permissions</key>
